...
        android:paddingLeft="@dimen/zpw_padding_8"
        android:paddingRight="@dimen/zpw_padding_8"
        android:paddingTop="@dimen/zpw_padding_5"
        android:weightSum="2">

        <TextView
            android:id="@+id/cancel_button"
            style="@style/dialog_blue_button"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingBottom="@dimen/zpw_padding_6"
            android:paddingLeft="@dimen/zpw_padding_15"
            android:paddingRight="@dimen/zpw_padding_15"
            android:paddingTop="@dimen/zpw_padding_6"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/confirm_button"
            style="@style/dialog_blue_button"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingBottom="@dimen/zpw_padding_6"
            android:paddingLeft="@dimen/zpw_padding_15"
...
