<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <vn.com.zalopay.wallet.view.custom.ImeDelBugFixedEditText
        android:id="@+id/inputView"
        style="@style/GridPasswordView.EditText"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="numberPassword"
        android:longClickable="false" />

</merge>