<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:baselineAligned="false"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/separate_stroke"
            android:background="@color/separate"/>

        <FrameLayout
            style="@style/WrapperEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.zalopay.ui.widget.edittext.ZPEditText
                android:id="@+id/edtAccountName"
                style="@style/ZaloPayEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:hint="@string/input.account.zalo.pay"
                android:inputType="textNoSuggestions|textVisiblePassword|textEmailAddress"
                android:maxLength="@integer/max_length_zalopay_name"/>
        </FrameLayout>

        <Button
            android:id="@+id/btnContinue"
            style="@style/Button.Default.New"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button.height"
            android:text="@string/btn_continue"/>
    </LinearLayout>
</ScrollView>
